--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
