--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@ PORT=5000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=web_store
-POSTGRESS_PASSWORD=root
+POSTGRESS_PASSWORD=1111
 POSTGRESS_PORT=5432
-JWT_ACCESS_SECRET=secret_key_safasf
-JWT_REFRESH_SECRET=secret_key_33333
+JWT_ACCESS_SECRET=
+JWT_REFRESH_SECRET=
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER=
 SMTP_PASSWORD=
-API_URL=http://localhost:5000
+SERVER_URL=http://localhost:5000
 CLIENT_URL=http://localhost:3000
