--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/sequelize": "^0.2.0",
     "@nestjs/swagger": "^4.8.0",
+    "@nestjs/typeorm": "^8.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -40,10 +40,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0",
-    "sequelize-typescript": "^2.1.0",
     "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
