sign-up dto was changed (first_name to firstName, etc....)

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@ CLIENT_URL=http://localhost:3000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=web_store
-POSTGRESS_PASSWORD=1111
+POSTGRESS_USER_PASSWORD=root
 POSTGRESS_PORT=5432
-JWT_ACCESS_SECRET=
-JWT_REFRESH_SECRET=
+JWT_ACCESS_SECRET=fffff
+JWT_REFRESH_SECRET=vvvvv
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER=
