--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "jimp": "^0.16.1",
     "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
