--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 PORT=5000
 SERVER_URL=http://localhost:5000
 CLIENT_URL=http://localhost:3000
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=web_store
-POSTGRESS_USER_PASSWORD=root
+POSTGRESS_PASSWORD=root
 POSTGRESS_PORT=5432
 JWT_ACCESS_SECRET=fffff
 JWT_REFRESH_SECRET=vvvvv
